--- a/common/common.scss
+++ b/common/common.scss
@@ -40,6 +40,8 @@
   .d-icon {
     margin-right: 5px;
     opacity: 0.7;
+    min-width: 16px;
+    text-align: center;
 
     .rtl & {
       margin-right: 0;
@@ -48,11 +50,13 @@
   }
 
   .fa-caret-down {
+    margin-right: 0;
     margin-left: 5px;
     transform: rotate(-90deg);
     transition: transform ease 0.15s;
 
     .rtl & {
+      margin-left: 0;
       margin-right: 5px;
       transform: rotate(90deg);
     }
