--- a/common/common.scss
+++ b/common/common.scss
@@ -43,6 +43,10 @@
     min-width: 16px;
     text-align: center;
 
+    &.fa-none {
+      min-width: unset;
+    }
+
     .rtl & {
       margin-right: 0;
       margin-left: 5px;
