UX: last menu item renders off screen on desktop

--- a/common/common.scss
+++ b/common/common.scss
@@ -54,6 +54,20 @@ $icon-opacity: 0.7;
           right: 0;
         }
       }
+
+      @if $Invert_position == "true" {
+        &:last-child {
+          .d-header-dropdown {
+            left: unset;
+            right: 0;
+
+            .rtl & {
+              right: unset;
+              left: 0;
+            }
+          }
+        }
+      }
     }
 
     .d-icon-caret-right {
