--- a/common/common.scss
+++ b/common/common.scss
@@ -33,6 +33,7 @@ $icon-opacity: 0.7;
     transition: all 0.15s;
     display: flex;
     align-items: center;
+    white-space: nowrap;
 
     &:hover,
     &:active,
