--- a/javascripts/discourse/connectors/above-site-header/header-submenus.hbs
+++ b/javascripts/discourse/connectors/above-site-header/header-submenus.hbs
@@ -1,25 +1,33 @@
-<div id='top-menu' class='top-menu'>
-  <div class='menu-content wrap'>
-    <div class="menu-placeholder">
-      <div class="menu-item-container">
-        <div class="menu-items">
+<div id="top-menu" class="d-top-menu">
+  <div class="d-top-menu__content wrap">
+    <div class="d-top-menu__placeholder">
+      <div class="d-top-menu__item-container">
+        <div class="d-top-menu__items">
           {{#each menuItems as |item|}}
-            <a class="menu-item {{item.view}} {{item.className}}" title="{{item.title}}">
+            <a
+              class="d-top-menu__item {{item.view}} {{item.className}}"
+              title="{{item.title}}"
+            >
               {{#if item.icon}}
                 {{d-icon item.icon}}
               {{/if}}
               {{item.text}}
               {{#if showCaret}}
-                {{d-icon "caret-right"}}
+                {{d-icon "caret-right" class="u-ml025"}}
               {{/if}}
               <div class="d-header-dropdown">
                 <ul class="d-dropdown-menu">
                   {{#each item.childItems as |child|}}
                     {{#if child.divider}}
-                      <li class='divider'></li>
+                      <li class="divider"></li>
                     {{else}}
-                      <li class="submenu-item {{child.className}}">
-                        <a target="{{child.target}}" title="{{child.title}}" class="submenu-link" href="{{child.href}}">
+                      <li class="d-top-menu__submenu-item {{child.className}}">
+                        <a
+                          target="{{child.target}}"
+                          title="{{child.title}}"
+                          class="d-top-menu__submenu-link"
+                          href="{{child.href}}"
+                        >
                           {{#if child.icon}}
                             {{d-icon child.icon}}
                           {{/if}}
